feat: styling thumbnails

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,9 +7,13 @@ layout: default
     <div class="row">
         {% for project in site.projects %}
           <div class="col-md-4 col-sm-6">
-              <a class="post-link thumbnail box" href="{{ project.url | relative_url }}">
-                <span>{{ project.title }}</span>
-                <img src="{{site.baseurl}}/{{ project.url | replace: "/", " " | truncatewords: 2, "" | replace: " ", "/" }}/{{ project.thumbnail }}"></img>
+              <a href="{{ project.url | relative_url }}">
+                  <div class="img__wrap">
+                <img class="img__img" src="{{site.baseurl}}/{{ project.url | replace: "/", " " | truncatewords: 2, "" | replace: " ", "/" }}/{{ project.thumbnail }}"></img>
+                <div class="img__description_layer">
+                    <p class="img__description">{{ project.title }}</p>
+                </div>
+                </div>
               </a>
         </div>
 
