--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ layout: default
 
     <div class="row">
         {% for project in site.projects %}
-          <div class="col-md-4 col-sm-6">
+          <div class="col-lg-3 col-md-4 col-sm-6">
               <a href="{{ project.url | relative_url }}">
                   <div class="img__wrap">
                 <img class="img__img" src="{{site.baseurl}}/{{ project.url | replace: "/", " " | truncatewords: 2, "" | replace: " ", "/" }}/{{ project.thumbnail }}"></img>
