--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,23 +6,21 @@
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" />
-
   <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
-
-  <!-- Loading dependencies required for this page. -->
-  {% for required in page.dependencies %}
-    {% for dependency in site.data.dependencies %}
-        {% if dependency.name == required %}
-            {{dependency.element}}
-        {% endif %}
-    {% endfor %}
-
-
+  <!-- dependencies -->
+  {% include dependency.html name="flexbox" %}
+  <!-- dev-dependencies -->
+  {% if jekyll.environment == 'development' %}
+    {% include dependency.html name="live" %}
+  {% endif %}
+  <!-- custom page dependencies -->
+  {% for dependency in page.dependencies %}
+    {% include dependency.html name=dependency %}
   {% endfor %}
+  <!-- google analytics -->
   {% if jekyll.environment == 'production' and site.google_analytics %}
-  {% include google-analytics.html %}
+    {% include google-analytics.html %}
   {% endif %}
 </head>
